# edor

./: .gitignore  .pc  Makefile.am  Makefile.old  README.md  _fs.h  appimage.yml  cf  cln  configure.ac  editoror.c  edor.spec  fs.h  main.c  md  mk  readme.md  termux  win
.github/workflows/: appimage.yml  deb.yml  msys.yml  pkg.yml  pkgarm.yml  rel.yml  rpm.yml  test.yml  upapp.yml  uponpkg.yml
.pc/: applied-patches
arh/: .gitignore  pub  re
debian/: README.Debian  c  changelog  control  copyright  files  patches  rules
debian/patches/: series
debian/source/: include-binaries  options
inc/sep/: stdlib.h
s/: .gitignore  Makefile.am  bar.c  base.h  d  da  def.h  extern.h  headless  macro.h  main.c  main.sh  md  mdh  mdhd  mh  null.h  sep.c  sep.h  split.c  test  tit.c  top.h  tw.c  ww.c
s/inc/: curses.h  errno.h  fcntl.h  stddef.h  stdio.h  stdlib.h  string.h  types.h  unistd.h
s/inc/asm-generic/: fcntl.h
s/inc/bar/: curses.h  dirent.h  errno.h  fcntl.h  stdio.h  stdlib.h  string.h  unistd.h
s/inc/main/: curses.h  dirent.h  dlfcn.h  fcntl.h  libunwind.h  poll.h  stdio.h  stdlib.h  string.h  sys_stat.h  time.h  unistd.h
s/inc/main/armv7/: libunwind.h  signal.h  stdio.h  stdlib.h
s/inc/sep/: stdlib.h  string.h
s/inc/split/: errno.h  stdlib.h  string.h  unistd.h
s/inc/tit/: stdlib.h  string.h
s/inc/tw/: stdlib.h
s/inc/ww/: stdlib.h
src/: bar.c  comp.c  main.h  main0.h  main2.h  mainb.h  mainbc.h  mainc.h  sep.c
